# NADOO-Migration-Framework

./: ++START_THIS_SCRIPT_FOR_MacOS_INSTALL++.sh  .coverage  .dockerignore  .gitignore  DEVELOPER.md  Dockerfile  ISSUES.md  README.md  batch_migrate_projects.py  docker-compose.yml  migrate_project.py  nadoo_projects_index.json  pyproject.toml  requirements.txt  run_migration.scpt  setup.py  test_progress_checklist.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  nadoo-check.yml
.nadoo/: config.toml
nadoo-migration-framework/src/nadoo-migration-framework/: __init__.py
nadoo-migration-framework/src/nadoo-migration-framework/classes/: FeedManager.py  ProjectMigrator.py  __init__.py
nadoo-migration-framework/src/nadoo-migration-framework/functions/: __init__.py  create_standard_directory_structure_for_path.py  extract_function_from_file_to_new_file.py  get_function_discovery_paths.py  get_project_structure_for_path.py  migrate_to_briefcase.py  (+1 more)
nadoo_migration_framework/: pyproject.toml
nadoo_migration_framework/src/nadoo_migration_framework/: PRODUCT_VISION.md  __init__.py  __main__.py  analyzers.py  app.py  base.py  cli.py  compatibility.py  config.py  dependency_management.py  fixes.py  manager.py  migration_base.py  migration_manager.py  migration_window.py  migrations.py  templates.py  version.py  version_compatibility.py  version_management.py  version_types.py  voice_commands.py
src.bak/: __init__.py
src.bak/classes/: FeedManager.py  ProjectMigrator.py
src.bak/functions/: convert_to_briefcase_toga.py
src.bak/nadoo_migration_framework/: __main__.py  analyzers.py  compatibility.py  fixes.py  voice_commands.py
src.bak/nadoo_migration_framework.dist-info/: METADATA  top_level.txt
src.bak/nadoo_migration_framework/cli/: __init__.py  brain_commands.py  update.py
src.bak/nadoo_migration_framework/frameworks/: brain_migration.py
src.bak/nadoo_migration_framework/gui/: __init__.py  app.py  migration_window.py  voice_window.py
src.bak/nadoo_migration_framework/migrations/: engine.py  gui_migrations.py  logging_enhancement_migration.py  nadoo_brain_migration.py  performance_monitoring_migration.py  performance_optimization_migration.py
src.bak/nadoo_migration_framework/voice/: __init__.py  voice_manager.py
src.bak/processes/: ProcessManager.py
src/nadoo_migration_framework/: __init__.py  base.py  cli.py  migration_base.py  pyproject.toml  version.py  version_management.py
src/nadoo_migration_framework/cli/: __init__.py  token_dialog.py
src/nadoo_migration_framework/frameworks/: brain_migration.py
src/nadoo_migration_framework/functions/: __init__.py
src/nadoo_migration_framework/gui/: __init__.py  app.py  toga_app.py
src/nadoo_migration_framework/migrations/: __init__.py  add_briefcase_toga.py  base.py  base_migration.py  brain_test_migration.py  briefcase_migrations.py  cleanup_project_structure.py  code_metrics_migration.py  database_migrations.py  dependency_analysis_migration.py  documentation_migration.py  dry_run.py  engine.py  fix_project_structure.py  function_organization_migration.py  migration_0001_initial.py  migration_0002_briefcase_structure.py  migration_manager.py  nadoo_brain_migration.py  performance_optimization_migration.py  repository_scanner.py  setup_cicd_pipeline.py  toga_functional_migrations.py  toga_import_migrations.py
src/nadoo_migration_framework/voice/: voice_manager.py
test_project/: pyproject.toml
test_project/.nadoo/: config.toml
test_project/.nadoo/backups/20241125_100536/: pyproject.toml
test_project/.nadoo/backups/20241125_100536/src/: main.py
tests/: __init__.py  test_brain_migrations.py  test_briefcase_migration.py  test_briefcase_migrations.py  test_briefcase_toga_conversion.py  test_briefcase_toga_migration.py  test_cicd_config.py  test_cleanup_migration.py  test_code_standards.py  test_create_directory_structure.py  test_cross_app_functionality.py  test_database_migrations.py  test_dependency_management.py  test_django_analyzer.py  test_django_fixer.py  test_django_functional_migrator.py  test_django_migrator.py  test_extract_function.py  test_function_discovery.py  test_get_project_structure.py  test_install_script.bats  test_memory.py  test_migration_coverage.py  test_migration_manager.py  test_nadoo_brain_migration.py  test_nadoo_structure.bats  test_performance_optimization_migration.py  test_project_migrator.py  test_project_structure_migrator.py  test_repository_scanner.py  test_security.py  test_stress.py  test_structure.bats  test_toga_import_migrations.py  test_toga_migrations.py  test_utils.py  test_version_management.py  test_voice_manager.py  test_zmq_communication.py
tests/django/: test_django_fixer.py
tests/migrations/: test_fix_project_structure.py  test_setup_cicd_pipeline.py
(+70 files in other folders)
