[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nadoo-migration-framework"
version = "0.2.5"
description = "A framework for migrating NADOO projects"
authors = ["NADOO IT Team <info@nadoo.it>"]
readme = "README.md"
packages = [{include = "nadoo_migration_framework", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = ">=8.1.0,<9.0.0"
pathlib = ">=1.0.1,<2.0.0"
toml = ">=0.10.2,<0.11.0"
toga = {version = ">=0.4.0", platform = "darwin", extras = ["cocoa"]}

[tool.poetry.scripts]
nadoo-migrate = "nadoo_migration_framework.cli:cli"
nadoo-init = "nadoo_migration_framework.cli:init_project"
nadoo-publish = "nadoo_migration_framework.cli:publish"
nadoo-update = "nadoo_migration_framework.cli:update"

[tool.nadoo]
version = "0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^7.0.0"
