[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "A test project for NADOO Migration Framework"
authors = ["NADOO IT Team <info@nadoo.it>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[tool.nadoo]
version = "0.2.5"
