[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test-project"
version = "0.1.0"
description = "A test project for NADOO Migration Framework"
authors = ["Test Author <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
